update real time
